--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ rootProject.name = 'assignment-application'
 include ':adapter'
 include ':adapter:database-adapter'
 include ':application'
-include ':service'
+include ':domain'
 include ':test'
 include ':test:integration-test'
 include ':web'
