--- a/adapter/database-adapter/build.gradle
+++ b/adapter/database-adapter/build.gradle
@@ -3,7 +3,7 @@ dependencies {
     implementation "org.liquibase:liquibase-core:${liquibaseVersion}"
     implementation "com.mattbertolini:liquibase-slf4j:${liquibaseSlf4jVersion}"
 
-    implementation project(":service")
-    testImplementation testFixtures(project(':service'))
-    testFixturesImplementation(testFixtures(project(":service")))
+    implementation project(":domain")
+    testImplementation testFixtures(project(':domain'))
+    testFixturesImplementation(testFixtures(project(":domain")))
 }
