--- a/test/integration-test/src/test/resources/application.properties
+++ b/test/integration-test/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 # Spring
 server.port=15050
 spring.output.ansi.enabled=ALWAYS
-spring.application.name=assignment-application
+spring.application.name=seed-application
 spring.jpa.open-in-view=false
 spring.jackson.default-property-inclusion=non_null
 spring.main.allow-bean-definition-overriding=true
