rename web module to api

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,8 +2,8 @@ rootProject.name = 'seed-application'
 
 include ':adapter'
 include ':adapter:database-adapter'
+include ':api'
 include ':application'
 include ':domain'
 include ':test'
 include ':test:integration-test'
-include ':web'
