--- a/application/build.gradle
+++ b/application/build.gradle
@@ -21,5 +21,5 @@ dependencies {
     implementation project(':adapter')
     implementation project(':adapter:database-adapter')
     implementation project(':domain')
-    implementation project(':web')
+    implementation project(':api')
 }
